# Code-Whisperer-

./: .gitignore  API_SPECIFICATIONS.md  ARCHITECTURE.md  Cargo.toml  DATA_STRUCTURES.md  MACHINE_LEARNING.md  README.md  USER_PREFERENCES.md  build.sh  dev.sh  package-lock.json  package.json  test-extension.js  test-extension.ts  test_real_data.js  todolist.md
code-whisperer-core/: Cargo.toml
code-whisperer-core/src/: ast_parser.rs  code_structure_analyzer.rs  context_aware_filter.rs  function_signature_detector.rs  lib.rs  local_storage_manager.rs  pattern_extractor.rs  pattern_scoring_engine.rs  style_analyzer.rs  suggestion_generation_engine.rs  user_behavior_tracker.rs  variable_naming_recognizer.rs  wasm_interface.rs  wasm_serializer.rs  wasm_serializer_new.rs
code-whisperer-wasm/: Cargo.toml  build.sh  demo.html
code-whisperer-wasm/src/: lib.rs
vscode-extension/: .eslintrc.js  package-lock.json  package.json
vscode-extension/src/: codeActionProvider.ts  codingPersonalityProfiler.ts  completionProvider.ts  config.ts  contextAwareLearning.ts  diagnosticProvider.ts  documentationStyleLearner.ts  errorHandlingPatternAnalyzer.ts  extension.ts  feedbackSystem.ts  hoverProvider.ts  multiLanguageCorrelator.ts  patternAdaptationEngine.ts  realTimeAnalyzer.ts  refactoringPatternDetector.ts  statusBar.ts  temporalPatternAnalyzer.ts  testingPatternRecognizer.ts  wasmLoader.ts
vscode-extension/src/test/: extension.test.ts  phase5.test.ts
vscode-extension/src/test/suite/: index.ts
